add Makefile option to skip Ogg or Mkv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ link_directories (${CMAKE_BINARY_DIR}/lib)
 option (STATIC_BUILD "Build Planet Blupi statically" ON)
 option (EMSCRIPTEN "Build Planet Blupi for emscripten toolchain" OFF)
 option (ASMJS "Build for asm.js instead of WebAssembly (slower)" OFF)
+option (OGG "Include OGG music" OFF)
+option (MOVIE "Include video files" OFF)
 
 if (EMSCRIPTEN)
   set (BUILD_JS ON)
